--- a/lab1/gradle/wrapper/gradle-wrapper.properties
+++ b/lab1/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Oct 17 10:50:35 EEST 2022
+#Tue Dec 13 15:26:51 EET 2022
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
 distributionPath=wrapper/dists
