--- a/lab1/settings.gradle
+++ b/lab1/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Correct word"
+rootProject.name = "lab1"
 include ':app'
